scss/partials/_svgtext.scss
$text-size: 2.7rem;
$author-size: 1.8em;

.quote {
	svg {
		overflow: visible;
		transition: 2s height;
	}

	svg.text {
		width: 100%;
		height: 1px;
		font-size: $text-size;
	}

	svg.author {
		width: 0;
		height: 2em;
		font-size: $author-size;
	}

	text {
		fill: none;
		stroke-width: 2px;
		font-family: CamBam-5;
	}

	text.dynamic {
		visibility: hidden;
	}

	text.animated {
		stroke-dasharray: 9em;
		stroke-dashoffset: 9em;
		visibility: visible;

		> tspan {
			animation: 0.6s linear 1 forwards dash;

			&.accum {
				animation: none;
				stroke-dashoffset: 0;
				stroke-dasharray: 0;
			}
		}
	}

	text.hidden > tspan:not(.accum) {
		display: none;
	}
}

@keyframes dash {
	from {
		stroke-dashoffset: 9em;
	}
	to {
		stroke-dashoffset: 4.5em;
	}
}
/* ... */

